[package]
name = "apex-edge-steering"
version = "0.1.0"
edition = "2021"
description = "Stateless edge content steering server implementing HLS and DASH Content Steering"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
base64 = "0.22"
url = "2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
